delete view CRUDS commit

--- a/templates/formulario/autorizacion_list.html
+++ b/templates/formulario/autorizacion_list.html
@@ -118,6 +118,9 @@
                             <a href="{% url 'formulario:autorizacion_update' auth.pk %}" class="btn-icon" title="Editar">
                                 ✏️
                             </a>
+                            <a href="{% url 'formulario:autorizacion_delete' auth.pk %}" class="btn-icon" title="Eliminar">
+                                🗑️
+                            </a>
                         </div>
                     </td>
                 </tr>
