--- a/templates/formulario/usuarioautorizacion_list.html
+++ b/templates/formulario/usuarioautorizacion_list.html
@@ -117,6 +117,9 @@
                                 <a href="{% url 'formulario:usuario_update' usuario.pk %}" class="btn-icon" title="Editar">
                                     ✏️
                                 </a>
+                                <a href="{% url 'formulario:usuario_delete' usuario.pk %}" class="btn-icon" title="Eliminar">
+                                    🗑️
+                                </a>
                             </div>
                         </td>
                     </tr>
