commit update historial actions

--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
                 <li class="nav-item">
                     <a href="{% url 'formulario:historial_list' %}" class="nav-link {% if request.resolver_match.url_name == 'historial_list' %}active{% endif %}">
                         <span class="nav-icon">📜</span>
-                        Historial
+                        Historial de Acciones
                     </a>
                 </li>
             </ul>
