--- a/templates/formulario/usuarioautorizacion_list.html
+++ b/templates/formulario/usuarioautorizacion_list.html
@@ -48,7 +48,7 @@
     <div class="stats-grid">
         <div class="stat-item">
             <div class="stat-content">
-                <span class="stat-number">{{ usuarios.paginator.count }}</span>
+                <span class="stat-number">{{ usuarios.count }}</span>
                 <span class="stat-label">Total Usuarios</span>
             </div>
         </div>
