add style AUTORIZACION_USUARIO historial commit

--- a/templates/formulario/historial_acciones_list.html
+++ b/templates/formulario/historial_acciones_list.html
@@ -600,6 +600,12 @@
     border: 1px solid #d2b4de;
 }
 
+.action-badge.actualizar_usuario {
+    background: #f4ecf7;
+    color: #8e44ad;
+    border: 1px solid #d2b4de;
+}
+
 .action-icon {
     font-size: 1rem;
 }
