config url actions historial commit base & dashboard template

--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'formulario:historial_list' %}" class="nav-link {% if request.resolver_match.url_name == 'historial_list' %}active{% endif %}">
+                    <a href="{% url 'formulario:historial_acciones_list' %}" class="nav-link {% if request.resolver_match.url_name == 'historial_acciones_list' %}active{% endif %}">
                         <span class="nav-icon">📜</span>
                         Historial de Acciones
                     </a>
