--- a/templates/formulario/dashboard.html
+++ b/templates/formulario/dashboard.html
@@ -97,7 +97,7 @@
         <div class="dashboard-section">
             <div class="section-header">
                 <h3>Actividad Reciente</h3>
-                <a href="{% url 'formulario:historial_list' %}" class="view-all">Ver historial</a>
+                <a href="{% url 'formulario:historial_acciones_list' %}" class="view-all">Ver historial</a>
             </div>
             <div class="section-content">
                 {% if actividad_reciente %}
