--- a/templates/formulario/historial_acciones_list.html
+++ b/templates/formulario/historial_acciones_list.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Historial{% endblock %}
+{% block title %}Historial de Acciones{% endblock %}
 
 {% block content %}
 <div class="page-container">
     <div class="page-header">
         <div class="header-content">
-            <h1>Historial del Sistema</h1>
+            <h1>Historial de Acciones</h1>
         </div>
         <div class="header-actions">
             <button class="btn-danger" onclick="mostrarModalVaciar()" title="Vaciar todo el historial">
